--- a/free5gc/values.yaml
+++ b/free5gc/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 createNamespace: false
-namespace: free5gc
+namespace: cn1
 mongodb:
   enabled: true
   controller:
