--- a/free5gc/values.yaml
+++ b/free5gc/values.yaml
@@ -2,8 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-createNamespace: false
-namespace: free5gc
+createNamespace: true
+namespace: cn1
 mongodb:
   enabled: true
   controller:
