--- a/free5gc/values.yaml
+++ b/free5gc/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-createNamespace: true
+createNamespace: false
 namespace: cn1
 mongodb:
   enabled: true
