--- a/free5gc/values.yaml
+++ b/free5gc/values.yaml
@@ -1,62 +1,41 @@
-# Default values for free5gcservice.
+# Default values for amf.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-createNamespace: false
-namespace: free5gc
-mongodb:
-  enabled: true
-  controller:
-    replicaCount: 1
-    cpu: 200m
-    image:
-      tag: 4.1.1-xenial
-    pvc:
-      volumeType: nfs
-      nfsPath: /nfsshare/mongodb
-      nfsServer: 192.168.26.11
-      reclaimPolicy: Recycle
-      accessModes: ReadWriteMany
-      storageClass: mongo
-      storage: 10Gi
-  service:
-    nodePort: true
-    nodePortNum: 31717
-
-webui:
-  enabled: true
-  controller:
-    replicaCount: 1
-    image:
-      repository: free5gctest/nextepc-webui
-      tag: latest
-      pullPolicy: IfNotPresent
-  service:
-    nodePort: true
-    nodePortNum: 31727
-
-free5gc:
+global:
   image:
-    repository: free5gctest/nextepc-build
-    tag: latest
-    pullPolicy: IfNotPresent
-  amf:
-    enabled: true
-    addr: 10.233.100.202
-    s1ap: 192.188.2.100
-    mcc: 208
-    mnc: 93
-  hss:
-    enabled: true
-    addr: 10.233.100.203
-  smf:
-    enabled: true
-    addr: 10.233.100.204
-    nodePort: 31780
-  pcrf:
-    enabled: true
-    addr: 10.233.100.205
-  upf:
-    enabled: true
-    addr: 10.233.100.206
-    gtpu: 192.188.2.101
+    free5gc: {}
+
+replicaCount: 1
+
+image:
+  repository: steven30801/free5gc-build
+  tag: v2.0.2
+  pullPolicy: IfNotPresent
+
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+http:
+  addr: 192.168.2.2
+ngap:
+  addr: 192.168.3.2
+  subnet: 192.168.3.0/24
+
+podSecurityContext: {}
+
+securityContext:
+  privileged: true
+
+resources:
+  requests:
+    intel.com/sriov_net: '1'
+  limits:
+    intel.com/sriov_net: '1'
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
