--- a/free5gc/Chart.yaml
+++ b/free5gc/Chart.yaml
@@ -1,6 +1,5 @@
-apiVersion: v2
-name: amf
-description: A Helm chart for AMF
-type: application
-version: 1.0.0
-appVersion: 2.0.2
+apiVersion: v1
+appVersion: "1.0"
+description: A Helm chart for Kubernetes
+name: free5gc
+version: 0.1.0
