--- a/free5gc/values.yaml
+++ b/free5gc/values.yaml
@@ -1,41 +1,62 @@
-# Default values for amf.
+# Default values for free5gcservice.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+#192.168.26.11
+createNamespace: false
+namespace: free5gc
+mongodb:
+  enabled: true
+  controller:
+    replicaCount: 1
+    cpu: 200m
+    image:
+      tag: 4.1.1-xenial
+    pvc:
+      volumeType: nfs
+      nfsPath: /nfsshare/mongodb
+      nfsServer: 172.29.120.85
+      reclaimPolicy: Recycle
+      accessModes: ReadWriteMany
+      storageClass: mongo
+      storage: 10Gi
+  service:
+    nodePort: true
+    nodePortNum: 31717
 
-global:
+webui:
+  enabled: true
+  controller:
+    replicaCount: 1
+    image:
+      repository: sufuf3/nextepc-webui
+      tag: latest
+      pullPolicy: IfNotPresent
+  service:
+    nodePort: true
+    nodePortNum: 31727
+
+free5gc:
   image:
-    free5gc: {}
-
-replicaCount: 1
-
-image:
-  repository: steven30801/free5gc-build
-  tag: v2.0.2
-  pullPolicy: IfNotPresent
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-http:
-  addr: 192.168.2.2
-ngap:
-  addr: 192.168.3.2
-  subnet: 192.168.3.0/24
-
-podSecurityContext: {}
-
-securityContext:
-  privileged: true
-
-resources:
-  requests:
-    intel.com/sriov_net: '1'
-  limits:
-    intel.com/sriov_net: '1'
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+    repository: sufuf3/nextepc-build
+    tag: version-1.0.0
+    pullPolicy: IfNotPresent
+  amf:
+    enabled: true
+    addr: 10.233.100.202
+    s1ap: 192.188.2.100
+    mcc: 208
+    mnc: 93
+  hss:
+    enabled: true
+    addr: 10.233.100.203
+  smf:
+    enabled: true
+    addr: 10.233.100.204
+    nodePort: 31780
+  pcrf:
+    enabled: true
+    addr: 10.233.100.205
+  upf:
+    enabled: true
+    addr: 10.233.100.206
+    gtpu: 192.188.2.101
