--- a/free5gc-0.1.0/values.yaml
+++ b/free5gc-0.1.0/values.yaml
@@ -37,8 +37,8 @@ webui:
 
 free5gc:
   image:
-    repository: sufuf3/nextepc-build
-    tag: version-1.0.0
+    repository: sufuf3/nextepc-base
+    tag: latest
     pullPolicy: IfNotPresent
   amf:
     enabled: true
