--- a/free5gc-0.1.0/templates/hss-deploy.yaml
+++ b/free5gc-0.1.0/templates/hss-deploy.yaml
@@ -38,7 +38,7 @@ spec:
         - "upf.localdomain"
       containers:
       - name: nextepc-hss
-        image: "{{ .Values.free5gc.image.repository2 }}:{{ .Values.free5gc.image.tag2 }}"
+        image: "{{ .Values.free5gc.hss.image.repository }}:{{ .Values.free5gc.hss.image.tag }}"
         command: ["/bin/bash"]
         args: ["-c", "/usr/src/free5gc/nextepc-hssd"]
         ports:
@@ -48,7 +48,7 @@ spec:
             name: api1
           - containerPort: 3868
             name: api2
-        imagePullPolicy: {{ .Values.free5gc.image.pullPolicy2 }}
+        imagePullPolicy: {{ .Values.free5gc.hss.image.pullPolicy2 }}
         env:
           - name: DB_URI
             value: mongodb://mongo-external.{{ .Values.namespace }}.svc.cluster.local/nextepc
