--- a/free5gc-0.1.0/values.yaml
+++ b/free5gc-0.1.0/values.yaml
@@ -36,39 +36,48 @@ webui:
     nodePortNum: 31727
 
 free5gc:
-  image:
-    - repository1: dockerfree5gc/free5gc-amf
-      tag1: latest
-      pullPolicy1: IfNotPresent
-    - repository2: dockerfree5gc/free5gc-hss
-      tag2: latest
-      pullPolicy2: IfNotPresent
-    - repository3: dockerfree5gc/free5gc-smf
-      tag3: latest
-      pullPolicy3: IfNotPresent
-    - repository4: dockerfree5gc/free5gc-pcf
-      tag4: latest
-      pullPolicy4: IfNotPresent
-    - repository5: dockerfree5gc/free5gc-upf
-      tag5: latest
-      pullPolicy5: IfNotPresent
+  
+    - 
+    - 
+    - 
+    - 
   amf:
     enabled: true
     addr: 10.233.100.202
     s1ap: 192.188.2.100
     mcc: 208
     mnc: 93
+    image:
+      repository: dockerfree5gc/free5gc-amf
+      tag: latest
+      pullPolicy: IfNotPresent
   hss:
     enabled: true
     addr: 10.233.100.203
+    image:
+      repository: dockerfree5gc/free5gc-hss
+      tag: latest
+      pullPolicy: IfNotPresent
   smf:
     enabled: true
     addr: 10.233.100.204
     nodePort: 31780
+    image:
+      repository: dockerfree5gc/free5gc-smf
+      tag: latest
+      pullPolicy: IfNotPresent
   pcrf:
     enabled: true
     addr: 10.233.100.205
+    image:
+      repository: dockerfree5gc/free5gc-pcf
+      tag: latest
+      pullPolicy: IfNotPresent
   upf:
     enabled: true
     addr: 10.233.100.206
     gtpu: 192.188.2.101
+    image:
+      repository: dockerfree5gc/free5gc-upf
+      tag: latest
+      pullPolicy: IfNotPresent
