--- a/free5gc-0.1.0/Chart.yaml
+++ b/free5gc-0.1.0/Chart.yaml
@@ -1,5 +1,15 @@
+name: docker-compose
+description: A generated Helm Chart for docker-compose from Skippbox Kompose
+version: 0.0.1
 apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes
-name: free5gc
-version: 0.1.0
+keywords:
+  - docker-compose
+sources:
+home:
+dependencies:
+  - name: mongodb
+    version: 0.1.0
+  - name: amf
+    version: 0.1.0
+  - name: nrf
+    version: 0.1.0
