--- a/free5gc-0.1.0/charts/webui/templates/free5gc-webui-deployment.yaml
+++ b/free5gc-0.1.0/charts/webui/templates/free5gc-webui-deployment.yaml
@@ -31,7 +31,7 @@ spec:
           env:
             - name: GIN_MODE
               value: release
-          image: lttp94/f5gc-webui:latest
+          image: sufuf3/nextepc-webui:latest
           name: webui
           ports:
             - containerPort: 5000
